--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ button:hover, a:hover {
 <h2 style="text-align:center">Profile Card</h2>
 
 <div class="card">
-  <img src="harshad.jpg" alt="121810304008" style="width:100%">
+  <img src="harshu4.jpg" alt="121810304008" style="width:100%">
   <h1>ADDALA HARSHAD</h1>
   <p class="title">Gitam student in vishakapatnam</p>
   <p>Gitam University</p>
